syntax = "proto3";

package message;

message AnnounceMessage {
    string handler = 2;
    string data = 3;
}
